--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>
+		<nav>
+			<ul>
+				<h3>3 random audios</h3>
+				<li><a href="http://commondatastorage.
+						googleapis.com/codeskulptor-demos/
+						DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_
+						Game.mp3">Home</li>
+				<li><a href="http://commondatastorage.googleapis.com/
+						codeskulptor-assets/Epoq-Lepidoptera.ogg">About us</li>
+				<li><a href="http://codeskulptor-demos.commondatastorage.
+						googleapis.com/pang/paza-moduless.mp3.">Contact us</li>
+			</ul>
+		</nav>
+	</header>
     <script type="text/javascript" src="./script.js">
 </script>
 
