--- a/main.html
+++ b/main.html
@@ -9,19 +9,32 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<header>
-		<nav>
-			<ul>
-				<h3>3 random audios</h3>
-				<li><a href="http://commondatastorage.
+		<nav>		
+				<a href="http://commondatastorage.
 						googleapis.com/codeskulptor-demos/
 						DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_
-						Game.mp3">Home</li>
-				<li><a href="http://commondatastorage.googleapis.com/
-						codeskulptor-assets/Epoq-Lepidoptera.ogg">About us</li>
-				<li><a href="http://codeskulptor-demos.commondatastorage.
-						googleapis.com/pang/paza-moduless.mp3.">Contact us</li>
-			</ul>
+						Game.mp3">Home</a>
+				<a href="http://commondatastorage.googleapis.com/
+						codeskulptor-assets/Epoq-Lepidoptera.ogg">About us</a>
+				<a href="http://codeskulptor-demos.commondatastorage.
+						googleapis.com/pang/paza-moduless.mp3.">Contact us</a>
 		</nav>
+
+		<h3>3 random audios</h3>
+
+
+			<audio controls>
+
+				<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
+
+
+					<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+			
+				
+					<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3.">
+				
+			</audio>
+		
 	</header>
     <script type="text/javascript" src="./script.js">
 </script>
