--- a/main.html
+++ b/main.html
@@ -18,8 +18,7 @@
 						codeskulptor-assets/Epoq-Lepidoptera.ogg">About us</a>
 				<a href="http://codeskulptor-demos.commondatastorage.
 						googleapis.com/pang/paza-moduless.mp3.">Contact us</a>
-		</nav>
-	</header>
+		
 
 		<h3>3 random audios</h3>
 		<ul>
@@ -32,10 +31,13 @@
 		</audio>
 		</li>
 		<li>
-		<audio controls source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3.">
+		<audio controls source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
 		</audio>
 		</li>
 		</ul>
+
+			</nav>
+	</header>
     <script type="text/javascript" src="./script.js">
 </script>
 
