--- a/main.html
+++ b/main.html
@@ -10,14 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<header>
 		<nav>		
-				<a href="http://commondatastorage.
-						googleapis.com/codeskulptor-demos/
-						DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_
-						Game.mp3">Home</a>
-				<a href="http://commondatastorage.googleapis.com/
-						codeskulptor-assets/Epoq-Lepidoptera.ogg">About us</a>
-				<a href="http://codeskulptor-demos.commondatastorage.
-						googleapis.com/pang/paza-moduless.mp3.">Contact us</a>
+				<a href="#">Home</a>
+				<a href="#">About us</a>
+				<a href="#">Contact us</a>
 		
 		</nav>
 		<h3>3 random audios</h3>
