--- a/main.html
+++ b/main.html
@@ -10,19 +10,19 @@
 	<!-- the entire body must be written by student -->
 	<header>
 		<nav>		
-				<a href="#">Home</a>
-				<a href="#">About us</a>
-				<a href="#">Contact us</a>
+				<a href="https://practice.geeksforgeeks.org/courses">Home</a>
+				<a href="https://practice.geeksforgeeks.org/courses">About us</a>
+				<a href="https://practice.geeksforgeeks.org/courses">Contact us</a>
 		
 		</nav>
 	</header>
 	
 		<h3>3 random audios</h3>
-		<audio controls source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
+		<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
 		</audio>
-		<audio controls source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+		<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
 		</audio>
-		<audio controls source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
+		<audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
 		</audio>			
 	
     <script type="text/javascript" src="./script.js">
