--- a/main.html
+++ b/main.html
@@ -10,9 +10,12 @@
 	<!-- the entire body must be written by student -->
 		<nav>
 			<ul>
-				<a href="https://www.imdb.com/title/tt10698680/">Home</a>
-				<a href="https://www.imdb.com/title/tt10698680/">About us</a>
-				<a href="https://www.imdb.com/title/tt10698680/">Contact us</a>
+				<li><a href="https://www.imdb.com/title/tt10698680/">Home</a>
+				</li>
+				<li><a href="https://www.imdb.com/title/tt10698680/">About us</a>
+				</li>
+				<li><a href="https://www.imdb.com/title/tt10698680/">Contact us</a>
+				</li>
 			</ul>
 		</nav>
 		
